--- a/application-sets/my-application-sets/many-apps-many-cluster.yml
+++ b/application-sets/my-application-sets/many-apps-many-cluster.yml
@@ -12,14 +12,14 @@ spec:
               repoURL: https://github.com/codefresh-contrib/gitops-cert-level-2-examples.git
               revision: HEAD
               directories:
-                - path: ./application-sets/example-apps/*
+                - path: application-sets/example-apps/*
           # cluster generator, 'child' #2
           - clusters: {}
   template:
     metadata:
       name: '{{path.basename}}-{{name}}'
     spec:
-      project: '{{path.basename}}'
+      project: default
       source:
         repoURL: https://github.com/codefresh-contrib/gitops-cert-level-2-examples.git
         targetRevision: HEAD
